finished writing files

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/team-leverage/reviews-database#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "faker": "^4.1.0",
+    "fs": "0.0.1-security"
   }
 }
