--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/team-leverage/reviews-database#readme",
   "dependencies": {
+    "eslint": "^6.3.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "pg-pool": "^2.0.7",
+    "pg-promise": "^9.1.4"
   }
 }
