--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "eslintConfig": {
+    "extends": "airbnb",
+    "env": {
+      "jest": true,
+      "browser": true
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/team-leverage/reviews-database.git"
@@ -17,7 +24,13 @@
   },
   "homepage": "https://github.com/team-leverage/reviews-database#readme",
   "dependencies": {
-    "eslint": "^6.3.0",
+    "body-parser": "^1.19.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
