connection for external db

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
     "pg-pool": "^2.0.7",
-    "pg-promise": "^9.1.4"
+    "pg-promise": "^9.1.4",
+    "url": "^0.11.0"
   }
 }
