--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "fs": "0.0.1-security",
+    "newrelic": "^5.11.0",
     "pg-pool": "^2.0.7",
     "pg-promise": "^9.1.4",
+    "redis": "^2.8.0",
     "url": "^0.11.0"
   }
 }
